--- a/www.newguysolana.xyz/index.html
+++ b/www.newguysolana.xyz/index.html
@@ -785,7 +785,7 @@
                                         width="118" alt="" class="arrow-how-to-buy" />
                                     <img src="https://www.newguysolana.xyz/assets/img/666081ecd62d22a3617e6ce8_newguy_pills 3.png" loading="lazy"
                                         width="95" alt="" class="decorative buy-2" />
-                                    <a href="https://pump.fun/coin/9teNqJhoLbKosJtocZFHMWQYDBrBQyvKS3PLw4Lspump?coins_sort=market_cap"
+                                    <a href="https://pump.fun"
                                         target="_blank" class="relative is-btn w-inline-block">
                                         <div class="black-bg button"></div>
                                         <div class="btn-copy">
@@ -1006,7 +1006,7 @@
                             <div class="newguynomic-item">
                                 <div class="newguynomics-text">CONTRACT ADDRESS</div>
                                 <div class="copy-info-container">
-                                    <div fs-copyclip-element="copy-this-2" class="newguynomics-text little">9teNqJhoLbKosJtocZFHMWQYDBrBQyvKS3PLw4Lspump</div>
+                                    <div fs-copyclip-element="copy-this-2" class="newguynomics-text little">tba</div>
                                 </div>
                             </div>
                             <img src="https://www.newguysolana.xyz/assets/img/stars-3.webp" loading="lazy" alt=""
